- 
    
Bug
 - 
    Resolution: Done
 - 
    
P2: Important
 - 
    5.8.0
 - 
    None
 
- 
        47b80ecae6fe0b9a2c74f0b0feb243145695995e
 
QOAuth1 emits granted() signal twice, one explicitly and the second when the status changed to Granted.
| For Gerrit Dashboard: QTBUG-63182 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 205110,5 | Avoid emitting QOAuth1::granted signal twice | 5.9 | qt/qtnetworkauth | Status: MERGED | +2 | 0 |