Avoid emitting QOAuth1::granted signal twice

Due to a bug in OAuth1 implementation, the granted() signal was being
emitted two times. This fix saves clients from repeating requests to the
web server, after authentication, in response to the repeated signal.

[ChangeLog][QOAuth1] Emit granted() only one time.

Task-number: QTBUG-63182
Change-Id: I6723d55a38fb773300ae14d3d9108d6863cde635
Reviewed-by: Mårten Nordheim <marten.nordheim@qt.io>
Reviewed-by: Edward Welbourne <edward.welbourne@qt.io>